# Sirius_GPB

./: .dockerignore  .env.app.example  .env.backend.example  .env.example  .gitignore  BACKEND_INTEGRATION.md  Dockerfile  Dockerfile.backend  alembic.ini  db.sqlite3  docker-compose.prom.yml  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
ai_handler/: Dockerfile  dpsk.py  main.py  rag.py
ai_handler/connectors/: llm_api.py
ai_handler/rag/: rag.py  ragdb.py
app/: Dockerfile  main.py
app/static/css/: styles.css
app/static/css/pages/: ai-analysis.css  auth.css  dashboard.css  history.css  news.css  notifications.css  profile.css  projects.css  search.css
app/static/js/: api.js  app.js
app/static/js/pages/: ai-analysis.js  auth.js  dashboard.js  news.js  notifications.js  profile.js  projects.js  search.js
app/templates/: ai-analysis.html  base.html  index.html  login.html  news.html  notifications.html  profile.html  register.html  search.html
app/templates/components/: common.html
app/templates/pages/: _all.html  ai_analysis.html  auth.html  dashboard.html  news.html  notifications.html  profile.html  projects.html  search.html
app/templates/partials/: nav.html  topbar.html
backend/: .env.example  Dockerfile  deps.py  main.py  news_parsers.py  parser.py  test.py
backend/api/: __init__.py
backend/api/routers/: account.py  data.py  domrf.py  rag.py
backend/api/schemas/: sign_schema.py
backend/config/: .env.example  settings.py
backend/database/: __init__.py  engine.py  get_rag_df.py
backend/database/models/: alerts.py  news.py  projects.py  users.py
backend/db/: __all_models.py  __init__.py  alerts.py  db_session.py  news.py  projects.py  users.py
backend/dbtest/: news.json
backend/domrf/: __init__.py  client.py  normalizer.py  router.py
backend/frontend/: route.py
backend/frontend/static/css/: base.css  styles.css
backend/frontend/static/css/pages/: auth.css  dashboard.css  news.css  notifications.css  profile.css  project-detail.css  projects.css
backend/frontend/static/js/: api.js  app.js
backend/frontend/static/js/core/: templates.js
backend/frontend/static/js/pages/: ai-analysis.js  dashboard.js  history.js  news.js  notifications.js  profile.js  project-detail.js  projects.js  search.js
backend/frontend/templates/: base.html  dashboard.html  history.html  index.html  project-detail.html  projects.html
backend/frontend/templates/components/: common.html
backend/frontend/templates/pages/: _all.html  history.html  news.html  notifications.html  profile.html  project_detail.html  projects.html  search.html
backend/frontend/templates/partials/: overlays.html  topbar.html
backend/llm/: cli.py  preprocessing.py  schemas.py  utils.py
backend/llm/models/: classifier_model.pkl
backend/ml/: res.csv
backend/ml/news_validator/: text.py
backend/parser/: parser.py
backend/schemas/: sign_schema.py
config/: .env.example  settings.py
data_manager/: Dockerfile  impact_signals.py  main.py  news_parsers.py  parser.py
data_manager/llm/: cli.py  dpsk.py  llm_client.py  pipeline.py  project_extractor.py  prompt.txt  text_classifier.py
data_manager/llm/models/: tfidf_vectorizer.pkl
data_manager/ml/: entity_matcher.py  impact_signals.py
data_manager/ml/news_validator/: text.py
data_manager/ml/news_validator/models/: logres.pkl  svc.pkl  tfidf.pkl  tfidfsvc.pkl
data_manager/ml/risk/: risk.py
data_manager/ml/risk/bert/: config.json  model.safetensors  tokenizer_config.json
data_manager/parse/: news_parsers.py  parser.py
database/: __init__.py  engine.py  get_rag_df.py
database/dumps/: database.sql
database/models/: __meta__.py  alerts.py  chunks.py  news.py  projects.py  users.py
migrations/: env.py
migrations/versions/: 20260704_01_saved_state.py
rag_manager/: Dockerfile  rag.py
rag_manager/connectors/: llm_api.py
scripts/: restore_dump.sh
src/: __init__.py  api.py  create_synthetics.py  exporter.py  importer.py  main.py  repository.py  schemas.py
src/app/static/css/: styles.css
src/app/static/js/: api.js  app.js
src/app/templates/: index.html
src/backend/: catalog.py  config.py  database.py  factory.py  models.py  repositories.py  routes.py  services.py
src/db/: __all_models.py  data_transport.py  importer.py  json_mixin.py  news.py  projects.py  users.py
src/dbtest/: db.sqlite3  news_exp.json  projects_exp.json  zhk_selected.csv
src/llm/: Untitled7.ipynb  check_red_flags.py  lllm_api.py
src/ml/: df.ipynb  zhk_selected_updated.csv
